fixes alignment of email icon

--- a/Frontend/src/components/Queue/components/PrintCardContainer.css
+++ b/Frontend/src/components/Queue/components/PrintCardContainer.css
@@ -65,7 +65,7 @@
 
 .emailRecipient {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   margin-right: 2em;
 }
 
